# lidar_camera_auto_calibration

./: CMakeLists.txt  README.md  pcd_auto_select.py  principle.md  readme.md  temp.cc
data/: 1.pcd  result.txt
data/pcd/: 1.pcd  2.pcd
data_1/: result.txt
data_1/pcd_fisheye/: 2.pcd  3.pcd  4.pcd  5.pcd  6.pcd
data_1/pcd_pinhole/: 1.pcd
include/: rotation.h
processed_data_08_03/pcd/: 2.pcd  3.pcd  4.pcd  5.pcd  6.pcd
src/: auto_calibration.cpp  create_depth_pic.cpp  manual_calibration.cpp  project.cpp
